--- a/src/index.html
+++ b/src/index.html
@@ -23,55 +23,58 @@
         </ul>
       </div>
       <!-- ------------------------------------------------------------------------------------>
-      <ul class="container__list">
-        <li class="container__item container__item--input" data-clear>
+      <ul class="container__list" data-info="list">
+        <li class="container__item container__item--input">
           <button type="button" class="container__button">x</button>
           <input
             type="text"
             class="container__input"
-            data-input
+            data-info="input"
             readonly="readonly"
           />
         </li>
-        <li class="container__item container__item--clear" data-clear-history>
+        <li
+          class="container__item container__item--clear"
+          data-info="clearHistory"
+        >
           Очитисти історію
         </li>
-        <li class="container__item" data-bracket-left>(</li>
-        <li class="container__item" data-bracket-right>)</li>
-        <li class="container__item" data-interest>%</li>
-        <li class="container__item" data-ac>AC</li>
-        <li class="container__item" data-pi>pi</li>
-        <li class="container__item" data-sin>sin</li>
-        <li class="container__item" data-square>
+        <li class="container__item" data-info="(">(</li>
+        <li class="container__item" data-info=")">)</li>
+        <li class="container__item" data-info="%">%</li>
+        <li class="container__item" data-info="AC">AC</li>
+        <li class="container__item" data-info="pi">pi</li>
+        <li class="container__item" data-info="sin">sin</li>
+        <li class="container__item" data-info="x^2">
           <span class="opacity">x</span>^2
         </li>
-        <li class="container__item container__item--number" data-one>1</li>
-        <li class="container__item container__item--number" data-two>2</li>
-        <li class="container__item container__item--number" data-three>3</li>
-        <li class="container__item" data-division>/</li>
-        <li class="container__item" data-e>e</li>
-        <li class="container__item" data-cos>cos</li>
-        <li class="container__item" data-sqrt>sqrt</li>
-        <li class="container__item container__item--number" data-four>4</li>
-        <li class="container__item container__item--number" data-five>5</li>
-        <li class="container__item container__item--number" data-six>6</li>
-        <li class="container__item" data-multiplication>*</li>
-        <li class="container__item" data-></li>
-        <li class="container__item" data-tan>tan</li>
-        <li class="container__item" data-factorial>
+        <li class="container__item container__item--number" data-info="1">1</li>
+        <li class="container__item container__item--number" data-info="2">2</li>
+        <li class="container__item container__item--number" data-info="3">3</li>
+        <li class="container__item" data-info="/">/</li>
+        <li class="container__item" data-info="e">e</li>
+        <li class="container__item" data-info="cos">cos</li>
+        <li class="container__item" data-info="sqrt">sqrt</li>
+        <li class="container__item container__item--number" data-info="4">4</li>
+        <li class="container__item container__item--number" data-info="5">5</li>
+        <li class="container__item container__item--number" data-info="6">6</li>
+        <li class="container__item" data-info="*">*</li>
+        <li class="container__item" data-info=""></li>
+        <li class="container__item" data-info="tan">tan</li>
+        <li class="container__item" data-info="!">
           <span class="opacity">x</span>!
         </li>
-        <li class="container__item container__item--number" data-seven>7</li>
-        <li class="container__item container__item--number" data-eight>8</li>
-        <li class="container__item container__item--number" data-nine>9</li>
-        <li class="container__item" data-minus>-</li>
-        <li class="container__item" data-></li>
-        <li class="container__item" data-ln>ln</li>
-        <li class="container__item" data-log>log</li>
-        <li class="container__item container__item--number" data-zero>0</li>
-        <li class="container__item container__item--number" data-dot>.</li>
-        <li class="container__item container__item--equal" data-equal>=</li>
-        <li class="container__item" data-plus>+</li>
+        <li class="container__item container__item--number" data-info="7">7</li>
+        <li class="container__item container__item--number" data-info="8">8</li>
+        <li class="container__item container__item--number" data-info="9">9</li>
+        <li class="container__item" data-info="-">-</li>
+        <li class="container__item" data-info=""></li>
+        <li class="container__item" data-info="ln">ln</li>
+        <li class="container__item" data-info="log">log</li>
+        <li class="container__item container__item--number" data-info="0">0</li>
+        <li class="container__item container__item--number" data-info=".">.</li>
+        <li class="container__item container__item--equal" data-info="=">=</li>
+        <li class="container__item" data-info="+">+</li>
       </ul>
       <!-- ------------------------------------------------------------------------------------>
     </div>
