--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,15 +17,21 @@
     <div class="container">
       <div class="history">
         <ul class="history__list">
-          <li class="history__item">1 + 2 - 4 = -1</li>
+          <!-- <li class="history__item">1 + 2 - 4 = -1</li>
           <li class="history__item">5 + 3 + 1 = 9</li>
-          <li class="history__item">3 * 2 - 1 = 5</li>
+          <li class="history__item">3 * 2 - 1 = 5</li> -->
         </ul>
       </div>
-      ----------------------------------------------------------------------------------
+      <!-- ------------------------------------------------------------------------------------>
       <ul class="container__list" data-info="list">
         <li class="container__item container__item--input">
-          <button type="button" class="container__button">x</button>
+          <button
+            type="button"
+            class="container__button"
+            data-info="clearInput"
+          >
+            x
+          </button>
           <input
             type="text"
             class="container__input"
@@ -76,8 +82,8 @@
         <li class="container__item container__item--equal" data-info="=">=</li>
         <li class="container__item" data-info="+">+</li>
       </ul>
-      ----------------------------------------------------------------------------------
+      <!-- ------------------------------------------------------------------------------------>
     </div>
     <script src="./index.js" type="module"></script>
   </body>
-</html> -->
+</html>
