--- a/src/index.html
+++ b/src/index.html
@@ -43,44 +43,49 @@
           class="container__item container__item--clear"
           data-info="clearHistory"
         >
-          Очитисти історію
+          CLEAR HISTORY
         </li>
         <li class="container__item" data-info="(">(</li>
         <li class="container__item" data-info=")">)</li>
-        <li class="container__item" data-info="%">%</li>
         <li class="container__item" data-info="AC">AC</li>
-        <li class="container__item" data-info="pi">pi</li>
-        <li class="container__item" data-info="sin">sin</li>
+        <!-- <li class="container__item" data-info="sin">sin</li> -->
         <li class="container__item" data-info="x^2">
           <span class="opacity">x</span>^2
         </li>
+        <li class="container__item" data-info="/">/</li>
         <li class="container__item container__item--number" data-info="1">1</li>
         <li class="container__item container__item--number" data-info="2">2</li>
         <li class="container__item container__item--number" data-info="3">3</li>
-        <li class="container__item" data-info="/">/</li>
-        <li class="container__item" data-info="e">e</li>
-        <li class="container__item" data-info="cos">cos</li>
+
+        <!-- <li class="container__item" data-info="e">e</li> -->
+        <!-- <li class="container__item" data-info="cos">cos</li> -->
         <li class="container__item" data-info="sqrt">sqrt</li>
+        <li class="container__item" data-info="*">*</li>
         <li class="container__item container__item--number" data-info="4">4</li>
         <li class="container__item container__item--number" data-info="5">5</li>
         <li class="container__item container__item--number" data-info="6">6</li>
-        <li class="container__item" data-info="*">*</li>
-        <li class="container__item" data-info=""></li>
-        <li class="container__item" data-info="tan">tan</li>
-        <li class="container__item" data-info="!">
+
+        <li class="container__item" data-info="factorial">
           <span class="opacity">x</span>!
         </li>
+        <!-- <li class="container__item" data-info=""></li> -->
+        <!-- <li class="container__item" data-info="tan">tan</li> -->
+        <!-- <li class="container__item" data-info="!"> -->
+        <!-- <span class="opacity">x</span>! -->
+        <!-- </li> -->
+        <li class="container__item" data-info="-">-</li>
         <li class="container__item container__item--number" data-info="7">7</li>
         <li class="container__item container__item--number" data-info="8">8</li>
         <li class="container__item container__item--number" data-info="9">9</li>
-        <li class="container__item" data-info="-">-</li>
-        <li class="container__item" data-info=""></li>
-        <li class="container__item" data-info="ln">ln</li>
-        <li class="container__item" data-info="log">log</li>
+
+        <li class="container__item" data-info="pi">pi</li>
+        <!-- <li class="container__item" data-info=""></li> -->
+        <!-- <li class="container__item" data-info="ln">ln</li> -->
+        <!-- <li class="container__item" data-info="log">log</li> -->
+        <li class="container__item" data-info="+">+</li>
         <li class="container__item container__item--number" data-info="0">0</li>
         <li class="container__item container__item--number" data-info=".">.</li>
         <li class="container__item container__item--equal" data-info="=">=</li>
-        <li class="container__item" data-info="+">+</li>
       </ul>
       <!-- ------------------------------------------------------------------------------------>
     </div>
