--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <!-- <link rel="stylesheet" href="./sass/main.css" /> -->
     <link rel="stylesheet" href="./sass/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,13 +16,8 @@
   <body>
     <div class="container">
       <div class="history">
-        <ul class="history__list">
-          <!-- <li class="history__item">1 + 2 - 4 = -1</li>
-          <li class="history__item">5 + 3 + 1 = 9</li>
-          <li class="history__item">3 * 2 - 1 = 5</li> -->
-        </ul>
+        <ul class="history__list"></ul>
       </div>
-      <!-- ------------------------------------------------------------------------------------>
       <ul class="container__list" data-info="list">
         <li class="container__item container__item--input">
           <button
@@ -49,7 +43,6 @@
         <li class="container__item" data-info="(">(</li>
         <li class="container__item" data-info=")">)</li>
         <li class="container__item" data-info="AC">AC</li>
-        <!-- <li class="container__item" data-info="sin">sin</li> -->
         <li class="container__item" data-info="x^2">
           <span class="opacity">x</span>^2
         </li>
@@ -57,38 +50,24 @@
         <li class="container__item container__item--number" data-info="1">1</li>
         <li class="container__item container__item--number" data-info="2">2</li>
         <li class="container__item container__item--number" data-info="3">3</li>
-
-        <!-- <li class="container__item" data-info="e">e</li> -->
-        <!-- <li class="container__item" data-info="cos">cos</li> -->
         <li class="container__item" data-info="sqrt">sqrt</li>
         <li class="container__item" data-info="*">*</li>
         <li class="container__item container__item--number" data-info="4">4</li>
         <li class="container__item container__item--number" data-info="5">5</li>
         <li class="container__item container__item--number" data-info="6">6</li>
-
         <li class="container__item" data-info="factorial">
           <span class="opacity">x</span>!
         </li>
-        <!-- <li class="container__item" data-info=""></li> -->
-        <!-- <li class="container__item" data-info="tan">tan</li> -->
-        <!-- <li class="container__item" data-info="!"> -->
-        <!-- <span class="opacity">x</span>! -->
-        <!-- </li> -->
         <li class="container__item" data-info="-">-</li>
         <li class="container__item container__item--number" data-info="7">7</li>
         <li class="container__item container__item--number" data-info="8">8</li>
         <li class="container__item container__item--number" data-info="9">9</li>
-
         <li class="container__item" data-info="pi">pi</li>
-        <!-- <li class="container__item" data-info=""></li> -->
-        <!-- <li class="container__item" data-info="ln">ln</li> -->
-        <!-- <li class="container__item" data-info="log">log</li> -->
         <li class="container__item" data-info="+">+</li>
         <li class="container__item container__item--number" data-info="0">0</li>
         <li class="container__item container__item--number" data-info=".">.</li>
         <li class="container__item container__item--equal" data-info="=">=</li>
       </ul>
-      <!-- ------------------------------------------------------------------------------------>
     </div>
     <script src="./index.js" type="module"></script>
   </body>
